Overflow fixed 2

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 *{
     scroll-behavior: smooth !important;
 }
-body{
-    overflow-x: hidden !important;
-}
+html, body {
+    overflow-x: hidden;
+    width: 100vw;
+    height: 100vh;
+  }
